syntax = "proto3";

package igmf.credit;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "igmf/credit/params.proto";
import "igmf/credit/credit.proto";
import "igmf/credit/module_info.proto";

option go_package = "igmf/x/credit/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/igmf/credit/params";
  
  }
  
  // Queries a list of Credit items.
  rpc Credit    (QueryGetCreditRequest) returns (QueryGetCreditResponse) {
    option (google.api.http).get = "/igmf/credit/credit/{index}";
  
  }
  rpc CreditAll (QueryAllCreditRequest) returns (QueryAllCreditResponse) {
    option (google.api.http).get = "/igmf/credit/credit";
  
  }
  
  // Queries a ModuleInfo by index.
  rpc ModuleInfo (QueryGetModuleInfoRequest) returns (QueryGetModuleInfoResponse) {
    option (google.api.http).get = "/igmf/credit/module_info";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCreditRequest {
  string index = 1;
}

message QueryGetCreditResponse {
  Credit credit = 1 [(gogoproto.nullable) = false];
}

message QueryAllCreditRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCreditResponse {
  repeated Credit                                 credit     = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetModuleInfoRequest {}

message QueryGetModuleInfoResponse {
  ModuleInfo ModuleInfo = 1 [(gogoproto.nullable) = false];
}

